# vicon_bridge2

./: .gitignore  Dockerfile  LICENSE  README.md  bridge_start.sh  demo.py  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
ViconBridge/: Pose6D.idl  __init__.py  interface.py
ViconBridge/msgs/: .idlpy_manifest  _Pose6D.py  __init__.py
vicon_bridge2/: CMakeLists.txt  package.xml
vicon_bridge2/include/: Pose6D.hpp
vicon_bridge2/include/vicon_bridge2/: communicator.hpp  marker_publisher.hpp  publisher.hpp
vicon_bridge2/launch/: vicon.launch.py
vicon_bridge2/src/vicon_bridge2/: Pose6D.cpp  communicator.cpp
vicon_msgs/: CMakeLists.txt  package.xml
vicon_msgs/msg/: Marker.msg  Markers.msg
vicon_receiver/: CMakeLists.txt
vicon_receiver/include/vicon_bridge2/: publisher.hpp
vicon_receiver/launch/: vicon.launch.py
vicon_receiver/src/vicon_bridge2/: communicator.cpp
