[metadata]
name = Go2Py
version = 1.0.0
description = A C++ bridge that reads the vicon states and publishes them as ROS2 and CycloneDDS messages. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rooholla-KhorramBakht/vicon_bridge2
author = Rooholla Khorrambakht
author_email = rk4342@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

install_requires =
    scipy
